# jittefex

./: .gitignore  .gitmodules  KaleidoscopeJIT.h  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.mk  aclocal.m4  builder.cc  compile.cc  configure  configure.ac  ir.cc  jit.cc  jittefex.cc  run.cc  sfjitLir.cc  toy.cc  type.cc
examples/: Makefile.am  Makefile.in  toy-int.cc  toy.cc
examples/kaleidoscope/: fib40.kal  mandel.kal  sintancos.kal  test3a.kal  test3b.kal  test4a.kal  test4b.kal  test4c.kal  test4d.kal  test4e.kal  test5a.kal  test6a.kal  test6b.kal  test7b.kal
jittefex/: builder.h  compile.h  config.h  instruction.h  ir.h  jit.h  jittefex.h  sfjit  type.h
scripts/: lean.m4  missing
src/: Makefile.am  Makefile.in  acconfig.h.in  builder.cc  compile.cc  ggggc-collections.cc  ggggc.cc  ir.cc  jit.cc  jittefex-config.cc  sfjitLir.cc  toy.cc.orig  type.cc
src/jittefex/: Instruction.def  builder.h  compile.h  config-prime.h.in  config.h.in  gc.h  ggggc  instruction.h  ir.h  jit.h  tl  type.h
src/jittefex/config-gc/jittefex/: config.h
src/jittefex/config-nogc/jittefex/: config.h
src/jittefex/config-notag/jittefex/: config.h
